--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
-    <script type="text/javascript" src="js/p5.play.js"></script>
+    <script type="text/javascript" src="js/p5.play.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   </head>
   <body>
-    <canvas id="canvas"></canvas>
   </body>
