--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/main.js" type="text/javascript"></script>
     <script src="https://github.com/john-doherty/swiped-events/blob/master/src/swiped-events.js" type="text/javascript">
 
-    <script src="swiped-events.min.js" type="text/javascript"></script>
+    <script src="https://raw.githubusercontent.com/john-doherty/swiped-events/master/dist/swiped-events.min.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   </head>
