--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Infinite Swimmer</title>
     <meta name="description" content="Infinite Swimmer">
     <meta name="author" content="Nik Szafranek">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
     <script src="js/p5.play.js" type="text/javascript"></script>
