--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
     <script src="js/p5.play.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
-    <script scr"js/hammer.js" type="text/javascript"></script>
+    <script scr"https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   </head>
