--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
-    <script src="js/p5.play.js"></script>
-    <script scr"js/ZingTouch.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/p5.play.js" type="application/javascript"></script>
+    <script scr"js/ZingTouch.js" type="application/javascript"></script>
+    <script src="js/main.js" type="application/javascript"></script>
     <div id="gameContainer"></div>
   </body>
