--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
     <script src="js/p5.play.js" type="application/javascript"></script>
     <script scr"https://cdnjs.cloudflare.com/ajax/libs/zingtouch/1.0.6/zingtouch.js"></script>
-    <script src="js/main.js" type="application/javascript"></script>
+    <script src="js/main.js" type="module"></script>
   </head>
   <body>
     <div id="gameContainer"></div>
