--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script src="js/p5.play.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/zingtouch/1.0.6/zingtouch.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
+    <script src="js/jquery.hammer.js">
+
+    </script>
     <script src="js/main.js"></script>
   </head>
   <body>
