--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <script src="js/p5.play.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/zingtouch/1.0.6/zingtouch.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
-    <script src="js/jquery.hammer.js">
-
-    </script>
+    <script src="js/jquery.hammer.js"></script>
+    <script
+			  src="https://code.jquery.com/jquery-3.6.0.slim.js"
+			  integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
+			  crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
   </head>
   <body>
