--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
     <script src="js/p5.play.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/zingtouch/1.0.6/zingtouch.js"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>-->
     <!--<script src="js/jquery.hammer.js"></script>-->
-    <script
+    <!--<script
 			  src="https://code.jquery.com/jquery-3.6.0.slim.js"
 			  integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
-			  crossorigin="anonymous"></script>
+			  crossorigin="anonymous"></script>-->
     <script src="js/main.js"></script>
   </head>
   <body>
